--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "babel-plugin-root-import": "^6.6.0"
   },
   "private": true
 }
